--- a/Model_building/3_Credit_Risk_Prediction.ipynb
+++ b/Model_building/3_Credit_Risk_Prediction.ipynb
@@ -238,7 +238,7 @@
    ],
    "source": [
     "# TASK : predict the loan status for the new data \n",
-    "# Hint please refer the 2_model_builing notebook\n",
+    "# Hint please refer to the 2_model_builing notebook\n",
     "temp_var = --\n",
     "temp_var"
    ]
@@ -249,7 +249,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# assigning the predicted loan status for final view\n",
+    "# assigning the predicted loan status for the final view\n",
     "df['loan_status_predicted'] = temp_var"
    ]
   },
@@ -368,8 +368,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# For the next steps please run the below command to install all the packages\n",
-    "# FYI please run this when u are running only in local machine\n",
+    "# For the next steps please run the below command to install all the required packages\n",
+    "# FYI please run this when you are running the code only in local machine\n",
     "!pip install -r ../requirements.txt"
    ]
   },
@@ -408,7 +408,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
