--- a/Model_building/1_EDA.ipynb
+++ b/Model_building/1_EDA.ipynb
@@ -685,7 +685,7 @@
     }
    ],
    "source": [
-    "# Printing the duplcated records in the dataset\n",
+    "# Printing the duplicated records in the dataset\n",
     "df[df.duplicated()]"
    ]
   },
@@ -1111,7 +1111,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
